webocket receive event 를 dutaskevent 로 변경

--- a/src/Websocket.Client/Websocket.Client.csproj
+++ b/src/Websocket.Client/Websocket.Client.csproj
@@ -40,4 +40,8 @@
 		<None Include="..\..\README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\Dubu\Dubu\Dubu.csproj" />
+	</ItemGroup>
+
 </Project>
